--- a/[6] 数学/金融数学.md
+++ b/[6] 数学/金融数学.md
@@ -94,26 +94,81 @@ $\ddot a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$
 n时刻终值：
 $\ddot s_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$
 
+总结：
 ||||
 |--|--|--|
 |$a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{i}$|$\ddot a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$ |$a_{n\urcorner}(1+i)=\ddot a_{n\urcorner}$|
-|$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$|$\ddot s_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$|$s_{n\urcorner}(1+i)=\ddot s_{n\urcorner}$|
+|$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$|$\ddot s_{n\urcorner}=\dfrac{(1+i)^n-1}{1-\dfrac{1}{1+i}}$|$s_{n\urcorner}(1+i)=\ddot s_{n\urcorner}$|
 |$\dfrac{1}{a_{n\urcorner}}=\dfrac{1}{s_{n\urcorner}}+i$|$\dfrac{1}{\ddot a_{n\urcorner}}=\dfrac{1}{\ddot s_{n\urcorner}}+1-\dfrac{1}{1+i}$||
 
 ## 永续年金
 $a_{\infty \urcorner}=\dfrac{1}{i}$
 
 ## 非标准期
+整个付款期为$n+k(0<k<1)$
+前n期每期付款1，第n+k期付款$\dfrac{(1+i)^k-1}{i}$
+- Def：$a_{n+k\urcorner}=a_{n\urcorner}+\dfrac{1}{(1+i)^{n+k}}\dfrac{(1+i)^k-1}{i}$
+
+## 变利率年金
+有两种：
+- 各付款时间段的利率不同
+- 各付款的款项利率不同
+
+解法是按照实际计算
+
+## 付款频率与计息频率不同的
+- 付款频率<计息频率
+- 付款频率>计息频率
+
+如果问题是计算现值和终值，把利率转化为等价于付款频率的利率即可。
+
+如果问题更复杂，需要用标准年金符号表示结果，这叫代数分析法：
+1. 付款频率<计息频率
+    1. 期末付年金
+    k：每个付款期间计息次数. n总计息次数. n, k, n/k为整数，每次付款额为1的年金
+    现值为:
+    $\dfrac{a_{n \urcorner}}{s_{k \urcorner}}$
+    累积值为：
+    $\dfrac{s_{n \urcorner}}{s_{k \urcorner}}$
+    2. 期初付年金
+    现值：$\dfrac{a_{n \urcorner}}{a_{k \urcorner}}$
+    终值：$\dfrac{s_{n \urcorner}}{a_{k \urcorner}}$
+    3. 永续年金
+    4. 连续计息
+2. 付款频率>计息频率
+    1. 期末付年金
+    m：每个计息期内付款次数。n：计息期数。i：利率。每个付款期付款额1/m
+    现值为$a_{n \urcorner}^{(m)}=\dfrac{1-\dfrac{1}{(1+i)^n}}{i^{(m)}}$
+    终值为$s_{n \urcorner}^{(m)}=\dfrac{(1+i)^n-1}{i^{(m)}}$
+
+...
+
+## 连续付款
+付款频率无限大
+- n个计息期的现值为$\bar a_{n \urcorner}=\int_0^n \dfrac{1}{(1+i)^t}dt$
+- n个计息期的终值为$\bar s_{n \urcorner}=\int_0^n \dfrac{1}{(1+i)^{n-t}}dt$
+
+题目：用$\delta$表示终值和现值
+
+## 基本变化年金
+
+- 各年付款额是等差数列
+$V(0)=Pv+(P+Q)v^2+(P+2Q)v^3+...+[P+(n-1)Q]v^n$
+$V(0)=Pa_{n \urcorner}+Q\dfrac{a_{n \urcorner}-nv^n}{i}$
+$V(n)=Ps_{n \urcorner}+Q\dfrac{s_{n \urcorner}-n}{i}$
+    - 当P=Q=1时，
+    记累积值$(Is)_ {n \urcorner}
+    =\dfrac{\ddot s_{n \urcorner}-n}{i}
+    =\dfrac{s_{n+1 \urcorner}-(n+1)}{i} $
+    记现值$(Ia)_ {n \urcorner}=\dfrac{\ddot a_{n \urcorner} - nv^n}{i}$
+    - 当P=n,Q=-1时，记$(Da)_ {n \urcorner} =n a_{n \urcorner}-\dfrac{a_{n \urcorner}-nv^n}{i}
+    =\dfrac{n-a_{n\urcorner}}{i}$
+    记终值$(Ds)_ {n \urcorner}=\dfrac{n(1+i)^n - s_{n \urcorner}}{i} $
 
 
 
-
-
-
-
-
-
-
+- 付款额从1到n递增，然后从n-1到1递减，称为 **期末付虹式年金**
+- 付款额从1到n递增，然后从n到1递减，n出现2次，称为 **期末付平顶虹式年金**
 
 
 
