--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -8,6 +8,14 @@
 
 
 # 数字类型  
+- int
+- long
+- float
+- bool
+- complex
+
+八进制前面加0
+十六进制前面加0x
 ## 整数类型（没有取值范围的限制）
 - pow(x,y)
 - 0x或0X开头表示16进制
@@ -60,6 +68,26 @@ print("\"大家好\"")
 \\
 \n表示换行
 ```
+引号可以嵌套
+```
+c2 = 'It is a "dog"!'
+c2= "It's a dog!"
+```
+
+三引号：
+```
+c1="""he
+she
+my
+you are
+hello"""
+```
+
+字符串前面加r，使转移符失效
+```
+r"hello boy\nhello boy"
+```
+
 ### 索引
 ```
 x="hello"
@@ -146,6 +174,7 @@ string.whitespace
 t3=123,456,("hello","中国")
 ```
 - tuple定义之后，其中的元素不能更改，也不能删除
+- 如果tuple中有个list，这个list可以更改
 ## 生成
 ```
 x=(1,2,3)
@@ -158,6 +187,14 @@ x+y
 3*x
 x[::2]
 ```
+## 特性：
+```
+y=[5,6,7]
+x=(1,2,y)
+x[2][0]=1000
+y[1]=800
+```
+
 # 列表（list）
 
 ## 方法(与string类似)
@@ -221,7 +258,8 @@ d = dict(zip(keys,values))
 ```
 
 ## 修改
-```
+
+```python
 d["key3"]=5#新增一对key-value
 del(d["key3"])#删除一对key-value
 ```
@@ -274,22 +312,37 @@ copy():拷贝
 
 
 
-# 八、集合
+# 集合
 
 集合是可变的
 
--  构造
+## 构造
 
 x1=[1,1,2,3,4];
 
 x=set(x1);
-
 >>> {1, 2}
 
-- 集合方法
 
+
+## 方法
+
+```
 z1=x.intersection(y);#交
-
 z2=y.union(x);#并
-
 z3=y.difference(x);#差
+```
+或者：
+```
+x&y
+x|y
+x-y
+```
+
+## 互转
+x可以是tuple，list，set：
+```
+tuple(x)
+list(x)
+set(x)
+```
