--- a/[2] python/[3] 程序结构.md
+++ b/[2] python/[3] 程序结构.md
@@ -6,21 +6,26 @@
 - 一个空序列为假，任何非空数列为真
 - 0为假，任何非0为真
 python从左向右扫描，一旦能确定结果，那么便不再扫描，例如：
-```
+```python
 if 1 or 1/0:
     print("hehe")
 ```
+这个程序不会报错，因为1/0不运行
 
 ```
 bool(x)
 ```
+
+- 语句末尾加一个\ 这个表示一句没写完，下一行继续这一行内容
+- 成块注释的技巧：用三个引号。可以当成注释来使用
+
 
 # 选择语句if/if-else
 
 
 Python中如果相邻行的语句有相同的缩进，这些语句将作为一组执行。所以在if中，用相同的缩进表示复合语句。
 
-```
+```python
 if booleanExpression1:
     Expression1
     Expression2
