--- a/[6] 数学/金融数学.md
+++ b/[6] 数学/金融数学.md
@@ -108,6 +108,7 @@ $a_{\infty \urcorner}=\dfrac{1}{i}$
 整个付款期为$n+k(0<k<1)$
 前n期每期付款1，第n+k期付款$\dfrac{(1+i)^k-1}{i}$
 - Def：$a_{n+k\urcorner}=a_{n\urcorner}+\dfrac{1}{(1+i)^{n+k}}\dfrac{(1+i)^k-1}{i}$
+然后$a_{n+k\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^{n+k}}}{i}$
 
 ## 变利率年金
 有两种：
@@ -146,7 +147,8 @@ $a_{\infty \urcorner}=\dfrac{1}{i}$
 ## 连续付款
 付款频率无限大
 - n个计息期的现值为$\bar a_{n \urcorner}=\int_0^n \dfrac{1}{(1+i)^t}dt$
-- n个计息期的终值为$\bar s_{n \urcorner}=\int_0^n \dfrac{1}{(1+i)^{n-t}}dt$
+- n个计息期的终值为$\bar s_{n \urcorner}=\int_0^n (1+i)^{n-t}dt$
+- 付款额为$f(t)$,那么$V(0)=\int_0^n f(t) v^t dt$
 
 题目：用$\delta$表示终值和现值
 
@@ -155,7 +157,7 @@ $a_{\infty \urcorner}=\dfrac{1}{i}$
 - 各年付款额是等差数列
 $V(0)=Pv+(P+Q)v^2+(P+2Q)v^3+...+[P+(n-1)Q]v^n$
 $V(0)=Pa_{n \urcorner}+Q\dfrac{a_{n \urcorner}-nv^n}{i}$
-$V(n)=Ps_{n \urcorner}+Q\dfrac{s_{n \urcorner}-n}{i}$
+$V(n)=Ps_{n \urcorner}+Q\dfrac{s_{n \urcorner}-n}{i}$(背会这个，其它都可以推导)
     - 当P=Q=1时，
     记累积值$(Is)_ {n \urcorner}
     =\dfrac{\ddot s_{n \urcorner}-n}{i}
