--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -26,21 +26,21 @@
 带小数点或小数的数字
 - 精度有限制
 float信息：
-```
+```python
 import sys
 sys.float_info
 ```
 ？？？ 不清楚具体的信息，搜一下
 ## 复数类型
 虚数部分用j或J表示，例如：  
-```
+```python
 12.3+4j,
 z=1.23e-4+5.6e+89j
 z.real   z.imag    
 ```
 ### 整数->小数->复数
 转化：
-```
+```python
 - int()(直接去掉小数部分)
 - float()（不能是复数）
 - complex()
@@ -49,13 +49,15 @@ type(x) 返回类型
 
 
 ### 运算符
+
+```python
 x+y x-y x*y x/y  
 x//y  不大于x/y的最大整数（负数也是）  
 x%y  余数  
 abs(x)  绝对值
 divmod(x,y) 实际是(x//y,x%y)
 x**y   pow(x,y)
-
+```
 
 
 
@@ -63,19 +65,20 @@ x**y   pow(x,y)
 
 
 ### 转义字符\  
-```
+```python
 print("\"大家好\"")
-\\
-\n表示换行
+#\\表示一个斜杠\
+#\n表示换行
 ```
+
 引号可以嵌套
-```
+```python
 c2 = 'It is a "dog"!'
 c2= "It's a dog!"
 ```
 
 三引号：
-```
+```python
 c1="""he
 she
 my
@@ -83,8 +86,8 @@ you are
 hello"""
 ```
 
-字符串前面加r，使转移符失效
-```
+字符串前面加r，使转移符\ 失效
+```python
 r"hello boy\nhello boy"
 ```
 
@@ -99,7 +102,7 @@ x[::-2]
 - 乘法操作重复连接字符串
 ### 字符串的操作
 
-```
+```python
 string.upper()  #字符串中的字母大写  
 string.lower()  #字符串中的字母小写  
 string.strip()   #去两边的空格及去指定字符  
@@ -147,15 +150,16 @@ string.replace("o","a")#把string中的o替换成a
 
 
 ### enumerate迭代器
-```
+```python
 String1 ='hello world'
 for index,letter in enumerate(String1):
     print(index,letter)
 for i in enumerate(String1)
     print(i)#i是tuple类型
 ```
+此外，enumerate也可以用于list
 
-```
+```python
 import string#string模块，处理字符比较方便
 string.punctuation
 string.digits
@@ -198,7 +202,8 @@ y[1]=800
 # 列表（list）
 
 ## 方法(与string类似)
-```Python
+
+```python
 x+y#连接起来
 int*x #重复n次
 len(x)
@@ -206,6 +211,7 @@ x[::2]
 for i in x
 exp in x#返回逻辑值，判断exp是否在x中
 ```
+
 ### 用索引取数据
 - 索引从0开始计数，
 - -1是末尾，-2是倒数第二个
@@ -232,8 +238,7 @@ helloString[::-1]
 ```
 
 
-# 字典
-
+# dict
 
 - Python对存储顺序进行了优化
 - list的键是数字，dict可以是其它类型
@@ -312,7 +317,7 @@ copy():拷贝
 
 
 
-# 集合
+# set
 
 集合是可变的
 
