--- a/[2] python/[4] 函数.md
+++ b/[2] python/[4] 函数.md
@@ -12,6 +12,7 @@ x=[1,2,3]
 main(x)
 print(x)
 ```
+
 结果是[9,2,3]
 ```python
 def main(x):
@@ -23,7 +24,8 @@ main(x)
 print(x)
 ```
 结果是[1,2,3]
-```
+
+```python
 def main(x):
     x=x+[9]
     return x
@@ -32,7 +34,8 @@ main(x)
 print(x)
 ```
 结果是[1,2,3]
-```
+
+```python
 def main(x):
     x=x.append(9)
     return x
@@ -40,11 +43,63 @@ x=[1,2,3]
 main(x)
 print(x)
 ```
+
 结果是[1,2,3,4]
-#### 结论：有些操作是修改内存的，这些操作在母函数中也有效；而有些操作是重新赋值，这些操作不会再母函数中有效
+
+**结论：有些操作是修改内存的，这些操作在母函数中也有效；而有些操作是重新赋值，这些操作不会再母函数中有效**
+
+# 参数传递
+
+```python
+b=1
+def function(add=0,b=0,c=0):
+    print (add)
+    print (b)
+    print (c)
+
+function(3,b=2)#省略值取默认值
+print(b)#注意，这里的b=1
+```
+## 全局变量和局部变量
+
+```python
+def func2():
+    print (i)
+i = 2
+func2()
+```
+会print一个2，全局赋值，在function里面有效
+
+global可以把变量进行全局声明
+```python
+def func3():
+    global i2
+    i2 = 7
+    print (i2)
+i2 = 9
+func3()
+print (i2)
+```
+
+# 文档字符串
+
+```python
+def d(i, j):
+    '''这个函数实现一个乘法运算。
+
+    函数会返回一个乘法运算的结果。'''
+    k = i * j
+    return k
+
+print(d.__doc__)
+help(d)
+```
+这两种方法都可以把注释打印出来
 
 
-## 递归
+
+
+# 递归
 Python 最大递归900余次
 ```python
 def reverse(s):
