--- a/[2] python/[3] 程序结构.md
+++ b/[2] python/[3] 程序结构.md
@@ -2,7 +2,10 @@
 <布尔运算符：and, or, not>
 - 从高到底依次是not, and, or
 关系操作符：<，<=,==,>=,!=
-- 对字符串的大小比较：按照ascii码表比较，长度可以不一致，例如"abcd"=="abc"
+- 对字符串的大小比较：按照ascii码表比较，长度可以不一致
+    - "bbc">"ab"返回的是True
+    - [1,1,0]>[0,1,1]返回的是True
+    - "abcd"=="abc"是没有语法错误的，返回的是False
 - 一个空序列为假，任何非空数列为真
 - 0为假，任何非0为真
 python从左向右扫描，一旦能确定结果，那么便不再扫描，例如：
@@ -12,7 +15,7 @@ if 1 or 1/0:
 ```
 这个程序不会报错，因为1/0不运行
 
-```
+```python
 bool(x)
 ```
 
@@ -53,13 +56,15 @@ else:#可选项，try无异常，那么执行这一块
 finally:#无论是否异常，执行这一块
     pass
 ```
-ValueError
-NameError
-SyntaxError#表达式错误
-TypeError
+- ValueError
+- NameError
+- SyntaxError#表达式错误
+- TypeError
 
-
-
+## 抛出异常
+```
+raise(NameError)
+```
 
 # 循环语句while
 ```python
@@ -72,14 +77,30 @@ else:#可省
 ```
 
 # 循环语句for
+
 ```python
 for i in object:
     Expression
+```
 
-#举例：
+object可以是str，list，dict，tuple
+举例：
+
+```python
 for i in 'hellow':
     print(i)
 ```
+
 for循环在直接在序列中遍历，因此，在for循环中改变list，可以影响下一次for循环
 ！！！这一点可以弄出很多编程技巧
+
+## 关于range
+
+```python
+y1=[x*x for x in range(10)]
+y2=[x*x for x in range(10) if x%3]
+```
+
+range(10)，等价于：range(0,10,1)
+
 #   break continue 功能与C语言类似
