--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -169,10 +169,34 @@ $=\dfrac{d}{dv}\int_u^vf(t,x)dt*v'(x)-\dfrac{d}{du}\int_u^vf(t,x)dt*u'(x)+\int_{
 $S=\int_0^{2\pi}\dfrac{1}{2}r^2d\theta$
 
 
+# 级数
+## 几个特殊的级数
+### 几何级数
+$\sum \limits_{n=0}^\infty aq^n$
+- 当$|q|<1$时，收敛
+- 当$|q|>=1$时，发散
+### p级数
+$\sum \limits_{n=0}^\infty \dfrac{1}{n^p}$
+- 当p>1时，收敛
+- 当p<=1时，发散
 
+一些变种：
+$\sum \dfrac{1}{n^p \ln n}$
+$\sum \dfrac{1}{n \ln^p n}$
 
+它们的收敛情况与p级数一样，这是因为$\ln^p n \backsim n^{p-1} $
 
+## 审敛法
+### 正项级数
+#### 比较法
+- $u_n \leq v_n$
+- $v_n$收敛
+那么,$u_n$收敛
 
+#### 比较法（极限形式）
+- $\dfrac{u_n}{v_n}$
+
+### 交错级数
 
 
 
