--- a/[9] 读书/[9-5] 社会经济学/教材/管理学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/管理学.md
@@ -52,5 +52,54 @@
 # 行为和学习是个体的两个基本特征
 ```mermaid
 graph LR
-A-->B
+A1[目标]-->B1[决策]
+A2[知识]-->B1
+A3[思维方式]-->B1
+
+A4[生理]-->B2[心理基础]
+A5[心理]-->B2
+
+B1-->C1[行为]
+B2-->C1
+
+C1 --- C2[学习]
+
+C2---D1[理论学习,训练]
+C2---D2[间接经验]
+C2---D3[直接经验]
+
+D3---E1[经历<br>技能<br>见识<br>人际<br>企业文化]
 ```
+
+# 现代观点
+1. 管理是组织的特殊器官
+2. 管理的实质是协调
+3. 是有意识的协调
+4. 是维持机体协作延续发展的行为
+
+正式组织的三要素：
+1. 协作意愿
+2. 共同目标*是吗？现代社会表示怀疑*
+3. 信息沟通
+
+# 企业环境
+能动性：
+1. 一定范围内选择行业、地区
+2. 创造与影响环境
+
+什么是环境：
+1. 顾客
+2. 资金供应者
+3. 劳动者
+4. 原材料、设备、商品供应者
+5. 政府
+6. 竞争对手
+
+- 企业不仅仅是一个经济组织，也是一个由人组成的集团。无论企业家还是员工，除了利润最大化，还有事业、感情、自我追求、理想等。经济利益并非全部。
+- 企业的目的：发展、生存
+企业面对的问题：企业战略、企业制度
+
+- 企业的目标：利润，所有者、管理者、职工的要求
+    - 企业目标反映一个组织的价值
+    - 为各方面活动提供方向
+    - 是企业与环境的动态平衡
