--- a/[6] 数学/精算师/金融数学3.md
+++ b/[6] 数学/精算师/金融数学3.md
@@ -89,9 +89,33 @@ $1+i=\prod\limits_{k} (1+i_k)$
 
 # 收益分配：投资组合法&投资年法
 ## 投资组合法
-先计算
+先计算全部收益，然后按照每个资金账户所占时间加权比例分配
+缺点：
+- 近期投资收益高，容易引起旧投资撤出，新投资难以进入
+
+## 投资年法
+$i_t^y$:y年的投资，在投资后第t年的收益率(用投资年法计算的)
+$i^y$:y年的投资收益率（投资组合法计算的）
 
 
+新投资收益率
+:    $i_1^y$
+
+# 资本预算
+在多种投资方向之间决策的过程。分为收益率法，净现值法
+
+## 收益率法
+设定一个最低可接受的收益率，计算各个投资方向的收益率，依次取收益率最大的
+
+## 净现值法
+
+- n：共有n个投资机会
+- $C_k(0 \leq k \leq n)$：第k个选择需要投入的初始资本
+- $NPV_k$：第k个选择的净现值
+
+问题转化为0-1规划问题：
+$max \sum\limits_{k=1}^n \theta_k NPV_k$
+$s.t. \sum\limits_{k=1}^n \theta_k C_k \leq C$
 
 
 
