--- a/[9] 读书/[9-5] 社会经济学/教材/管理学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/管理学.md
@@ -103,3 +103,124 @@ D3---E1[经历<br>技能<br>见识<br>人际<br>企业文化]
     - 企业目标反映一个组织的价值
     - 为各方面活动提供方向
     - 是企业与环境的动态平衡
+- 企业战略
+    - 根据发展需要而制定的
+    - 要点不在于内部管理，而在于环境对企业的要求
+        - 经营范围
+        - 资源配置
+        - 竞争优势
+        - 协同优势
+    - 长期
+    - 与行动和现实结合
+
+# 市场和计划
+社会主要是市场起作用，企业内部主要是计划起作用
+- 市场的优点
+    - 企业自主性
+    - 分配资源
+    - 积极性、主动性
+- 市场的缺点
+    - 不确定性、盲目性
+    - 不公平竞争
+    - 资源浪费（交易费用、信息费用）
+    - 机会主义、不择手段
+
+# 经营资源
+- 资金
+- 物质资源
+- 人力资源
+    - 非熟练工通用性高
+    - 熟练工通用性低
+- 信息
+    - 商业秘密
+    - 技术、顾客、市场情报
+    - 企业形象
+    - 企业文化
+    - 职工到的
+
+
+企业的核心能力
+:    有用性、不可替代性、不可模仿性
+
+企业的产出
+:    资金、信息、人。其中，人是企业最重要的额资源
+
+# 多元化战略
+- 有效利用资源，包括 信息、技术、专利、商标
+- 优化成本结构（因为新员工的工资低）
+- 激发员工的士气
+    - 发展时期员工热情高涨
+    - 更多的晋升机会
+- 范围经济
+- 分散风险
+
+# 资源配置的战略
+- 预算式（更接近计划）
+- 分散式（更接近市场）
+    - 缺点：
+        - 资金不足与闲置，造成浪费
+        - 受短期影响较大的项目，长远难以获得足够的投资
+    - 方法
+        - 减少总公司对下级的直接控制
+        - 允许经营单位有自有资金，累积盈利，以作为今后的投资资本
+        - 总公司有类似银行的功能，对子公司提供贷款
+        - 以企业整体战略为方针
+
+# 国际化
+原因：
+- 市场与资源在不同的国家
+- 政治：规避贸易壁垒
+- 经济：规避金融风险
+- 提高效率：生产地和经营地的物流等成本
+
+是否国际化的分析：
+- 政治环境
+    - 政府体制、政党制度、国家利益
+    - 政治稳定性
+    - 对待外资的态度
+- 法律环境
+    - 国际法
+    - 对方国家的国内法
+- 社会文化
+    - 事实性知识、语言、宗教、物质文化、审美、教育
+    - 人生态度、对权威态度、价值观
+- 经济环境
+    - 经济水平
+    - 市场完善与开放程度
+    - 基建、金融、文教、通讯、能源
+    - 稳定
+    - 经济政策
+    - 技术环境
+
+# 外部关系
+- 社会责任
+- 股东
+    - 小股东
+    - 投资机构
+    - 金融舆论专家
+- 消费者
+- 交易伙伴
+    - 供应商
+    - 经销商
+- 政府关系
+    - 宏微观调控、利益分配、信息导向、资金来源与客户
+- 媒体
+
+# 组织管理
+
+领导的职能：
+- 奋斗目标、方向
+    - 明确or方向性
+    - 唯一or多元
+    - 挑战or现实
+- 企业文化
+    - 气场是稳定or创新
+- 外部关系
+    - 沟通时，坚持or折中
+- 分解任务、激励
+   - 用人时，生产优先or人际优先？
+
+# 其它
+
+发展
+:    不断破坏原油均衡的过程
