--- a/[9] 读书/[9-5] 社会经济学/教材/管理学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/管理学.md
@@ -1,3 +1,9 @@
+# 管理学工具
+Swot
+PDCA:plan,do,check,action
+6w2h:what  why  who  when  which  how    how much
+SMART:specific  attainable  measurable  relevant  time-based
+
 # 史前积累
 # 古典管理理论
 ## 泰罗
