--- a/[9] 读书/[9-2] 现代百家/现代百家.md
+++ b/[9] 读书/[9-2] 现代百家/现代百家.md
@@ -67,9 +67,9 @@
 中国市场大，劣质化向下余地大。八级市场。
 初心：过去的经验，可能成为负资产
 我执：执着于手段，而不是执着于目标。
-企业的基因①决策权：上or中or下②激励机制：现在or未来③权力结构④信息传递方式：高向低or低向高or中间向两头
-受过教育：饭桌上能拿得起放得下筷子
-君子勿速。人和猿的区别之一是，人的童年期很长。慢慢来，才比较快。耽误也没什么，一切弯路都是直路。
+- 企业的基因①决策权：上or中or下②激励机制：现在or未来③权力结构④信息传递方式：高向低or低向高or中间向两头
+- 受过教育：饭桌上能拿得起放得下筷子
+- 君子勿速。人和猿的区别之一是，人的童年期很长。慢慢来，才比较快。耽误也没什么，一切弯路都是直路。
 寻梦就是破梦
 人们容易高估一年的变化，但低估五年的变化
 企业/人的核心文化，是看危机时刻的反映
@@ -145,7 +145,8 @@
 
 - 做决定时，都希望有人可以给我们一个理由，有人支持，哪怕有人反对也是好的。我们并不是真正想听取意见，意见在这个时候并不是很重要。我们更多的是需要一个命令，以及可以可以一起承担结果的人。
 
-
+- 你说的很对，但是能不能指向一个行动方案呢？
+- 你内心深处渴望不平凡，大部分情况下，你只是懒
 
 
 
@@ -171,10 +172,22 @@
 
 ## 恶之果
 
+明成祖朱棣，永乐皇帝
+所做的一切都是为了合法性：
+- 锦衣卫
+- 用太监：出使，专征，监军，分镇，刺探
+- 永乐大典
+- 郑和
+- 五出漠北，北伐蒙古
+- 迁都北京，修建北京城
+- 继承人
+
+所以，凡夫畏果，菩萨畏因
 
 
 
 
 
 
-    【未完待续。。。】
+
+【未完待续。。。】
