--- a/[9] 读书/[9-4] 外国历史/外国政体.md
+++ b/[9] 读书/[9-4] 外国历史/外国政体.md
@@ -3,14 +3,18 @@
 - 洛克《政府论》：立法权----议会。行政权、对外权----国王
 # 美国总统制：
 总统、国会、最高法院
+```mermaid
+graph LR
+A[总统]--否决国会法案-->B[国会]
+B--2/3通过法案总统不能否决&弹劾总统-->A
 
-2/3通过法案总统不能否决
-弹劾总统
-任命
-宣布违宪
-批准人选
-宣布法案违宪
-否决国会法案
+B--批准人选-->C[最高法院]
+C--宣布违宪-->B
+
+C--任命-->A
+A--宣布违宪-->C
+```
+
 
 
 # 英国内阁制
