--- a/[9] 读书/[9-5] 社会经济学/教材/产业经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/产业经济学.md
@@ -349,50 +349,138 @@ C7-->D11[签订长期合约]
 
 # 定价
 ## 掠夺性定价
+- 实力相当的企业：风险大
+- 条件：
+    - 优势企业规模优势
+    - 优势企业成本优势
+
 ### 目的
-①驱逐现有竞争对手②扼制潜在竞争对手③对不合作企业形成威慑
+- 驱逐现有竞争对手
+- 扼制潜在竞争对手
+- 对不合作企业形成威慑
+
 ### 条件
-①企业能承受短期损失（弥补方法：价格歧视、质量定价、交叉补贴）②有能力满足全部需求
-要求：规模优势、成本优势
-二、阻止定价
-条件①制订的价格低于潜在进入企业的成本②有能力满足全部需求③若存在多家大企业，合作才能取得效果
-要求：先动优势、成本优势
-搭售
+- 企业能承受短期损失（弥补方法：价格歧视、质量定价、交叉补贴）
+- 有能力满足全部需求
+
+## 阻止定价
+### 条件
+- 制订的价格低于潜在进入企业的成本
+- 有能力满足全部需求
+- 若存在多家大企业，合作才能取得效果
+
+要求：
+- 先动优势（博弈）
+- 成本优势
+
+# 搭售
 显性搭售、隐性搭售
 契约式搭售、事实搭售
 封闭式搭售、开放式搭售
-原因：①追求杠杆效应（垄断A，影响B产品市场）②阻止潜在企业进入③实行价格歧视④逃避价格规制⑤推销滞销商品⑥追求规模经济⑦暗中给与优惠服务⑧保证质量与维护卖方信誉
+
+## 原因
+- 追求杠杆效应（垄断A，影响B产品市场）
+- 阻止潜在企业进入
+- 实行价格歧视
+- 逃避价格规制
+- 推销滞销商品
+- 追求规模经济
+- 暗中给与优惠服务
+- 保证质量与维护卖方信誉
+
 结果：
-企业①维护信誉②降低销售风险
-市场①纵向排斥②横向排斥
-消费者①被迫支出②提高购买效率
-纵向限制
-1、市场势力说
-双边垄断   （解决）→纵向一体化（但是无法实现）→纵向限制
-2、市场失灵说
-供应商之间搭便车：广告、培训、潜在商户名单
-销售商之间搭便车：广告、培训、展示厅、信誉
-广告
-劣质品市场（解决）：担保或保证、责任法、声誉、专家、标准或证书
-作用：①传递事实性信息②建立声誉③提高产品差异化
-类型：①信息型&劝说型②目标型③比较型
-创新
-①发明：新思想的产生②创新：新思想的应用③模仿：对创新的复制
-分类：①产品创新（实质也是工艺创新）②工艺创新（降低成本的创新）（剧烈创新、非剧烈创新）
-剧烈创新：创新后即使垄断价格也比以前低
-专利
-目的：保护创新、促进发明创造①促进研发投资②促进技术与秘密公开③创造产权
-两面性：刺激创造、垄断定价
-“熊彼特-阿罗争论”
+- 企业
+    - 维护信誉
+    - 降低销售风险
+- 市场
+    - 纵向排斥
+    - 横向排斥
+- 消费者
+    - 被迫支出
+    - 提高购买效率
+
+# 纵向限制
+
+## 1、市场势力说
+```mermaid
+graph LR
+A[双边垄断]--改进-->B[纵向一体化]
+B--无法实现-->C[纵向限制]
+```
+
+## 2、市场失灵说
+```mermaid
+graph LR
+A[市场失灵说]---B1[供应商之间搭便车]
+A---B2[销售商之间搭便车]
+
+B1---C1[广告]
+B1---C2[培训]
+B1---C3[潜在顾客名单]
+
+B2---C4[广告]
+B2---C5[培训]
+B2---C6[展示室]
+B2---C7[信誉]
+```
+
+# 广告
+**劣质品市场**（解决）：担保或保证、责任法、声誉、专家、标准或证书
+
+广告作用：①传递事实性信息②建立声誉③提高产品差异化
+广告类型：①信息型&劝说型②目标型③比较型
+广告强度：
+$ \left. \begin{array}{ccc}
+q=q(a,p)\\
+\pi=pq-C(q)-at
+\end{array} \right \}
+\Rightarrow
+\dfrac{\partial \pi}{\partial a}=0
+\Rightarrow \dfrac{A}{S}=\dfrac{1}{\epsilon} \dfrac{a}{q} \dfrac{\partial q}{\partial a}$
+
+# 创新
+## 分类1
+- 发明：新思想的产生
+- 创新：新思想的应用
+- 模仿：对创新的复制
+## 分类2
+- 产品创新（实质也是工艺创新）
+- 工艺创新（降低成本的创新）
+    - 剧烈创新：创新后即使垄断价格也比以前低
+    - 非剧烈创新
+
+## 专利
+- 宗旨：保护创新、促进发明创造
+- 目的
+    - 促进研发投资
+    - 促进技术与秘密公开
+    - 创造产权
+- 两面性：刺激创造、垄断定价
+
+## “熊彼特-阿罗争论”
 熊彼特：
 一、内容①大企业更迫切创新②大企业更有创新能力
 二、大企业优势①风险承担能力②成本承担能力③规模经济
+
 阿罗：
 一、内容①完全竞争市场最有效率（创新也不例外）②垄断企业已有很高利润③垄断企业竞争威胁小④竞争企业的创新带来的低成本全归企业，垄断不是（曲线图）
 二、中小企业优势①灵活②创新意识强③沟通交流顺畅
-研发的市场失灵①不确定性与风险②信息③复杂性与资本密集性④研发收益的可占有性
-政府①提供研发激励②直接资金③创造与维护法律环境④组建政府研发机构
-市场营销
+
+
+
+## 研发的市场失灵
+- 不确定性与风险
+- 信息
+- 复杂性与资本密集性
+- 研发收益的可占有性
+
+政府
+- 提供研发激励
+- 直接资金
+- 创造与维护法律环境
+- 组建政府研发机构
+
+# 市场营销
 逆向营销：长期不明朗、以战术决定战略
 组织市场：①产业市场：派生需求、多人决策、过程复杂、提供服务
 ②中间商市场：人少规模大、被动、缺乏弹性
