--- a/[9] 读书/[9-3] 中国历史/中国金融史.md
+++ b/[9] 读书/[9-3] 中国历史/中国金融史.md
@@ -1,5 +1,5 @@
 # 作局（中国当代期货史）
-1、苏州商品交易所事件。上海派清楚潜在外援（1、声明警告2、时机选在北京交易所战争期间），用新闻手段洗盘，控制仓库库存。最后多逼空
+1、苏州商品交易所事件。上海派清除潜在外援（1、声明警告2、时机选在北京交易所战争期间），用新闻手段洗盘，控制仓库库存。最后多逼空
 2、327国债事件。管金生利用将多方拉爆仓的方式，反败为胜。却不敌国家政策。交易结果是不可更改的，巴林银行能宣布交易作废吗？中经开：327事件，长虹转配股事件，银广夏事件。
 3、股票手法：建仓、震荡、拉升、派发
 期货：逼空、浮盈加仓。空头被迫砍仓后，多头趁机出货。
