--- a/[6] 数学/精算师/金融数学.md
+++ b/[6] 数学/精算师/金融数学.md
@@ -101,6 +101,21 @@ $\ddot s_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$
 |$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$|$\ddot s_{n\urcorner}=\dfrac{(1+i)^n-1}{1-\dfrac{1}{1+i}}$|$s_{n\urcorner}(1+i)=\ddot s_{n\urcorner}$|
 |$\dfrac{1}{a_{n\urcorner}}=\dfrac{1}{s_{n\urcorner}}+i$|$\dfrac{1}{\ddot a_{n\urcorner}}=\dfrac{1}{\ddot s_{n\urcorner}}+1-\dfrac{1}{1+i}$||
 
+总结1：
+||现值|累积值|永续年金现值|
+|--|--|--|--|
+|期末付款|$a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{i}$|$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$|$a_{\infty \urcorner}=\dfrac{1}{i}$|
+|期初付款|$\ddot a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$|$\dfrac{1}{a_{n\urcorner}}=\dfrac{1}{s_{n\urcorner}}+i$|$\ddot a_{n}=\dfrac{1}{d}$|
+
+总结2：
+每年支付m次的年金
+
+||现值|累计值|永续年金现值|
+|--|--|--|--|
+|期末付款|$a_{n\urcorner}^{(m)}=\dfrac{1-v^n}{i^{(m)}}$|$s_{n\urcorner}^{(m)}=\dfrac{(1+i)^n-1}{i^{(m)}}$|$a_{\infty\urcorner}^{(m)}=\dfrac{1}{i^{(m)}}$|
+|期初付款|$\ddot a_{n\urcorner}^{(m)}=\dfrac{1-v^n}{d^{(m)}}$|$\ddot s_{n \urcorner}^{(m)}=\dfrac{(1+i)^n-1}{d^{(m)}}$|$a_{\infty\urcorner}^{(m)}=\dfrac{1}{d^{(m)}}$|
+|连续付款|$\bar a_{n\urcorner}=\dfrac{1-v^n}{\delta}$|$\bar s_{n \urcorner}=\dfrac{(1+i)^n-1}{\delta}$|$\bar a_{\infty \urcorner}=\dfrac{1}{\delta}$|
+
 ## 永续年金
 $a_{\infty \urcorner}=\dfrac{1}{i}$
 
