--- a/[6] 数学/精算师/金融数学3.md
+++ b/[6] 数学/精算师/金融数学3.md
@@ -118,6 +118,114 @@ $max \sum\limits_{k=1}^n \theta_k NPV_k$
 $s.t. \sum\limits_{k=1}^n \theta_k C_k \leq C$
 
 
+# 债务偿还
+债务偿还的方式
+- 满期偿还：到期一次性还本付息
+- 分期偿还：贷款期内，按一定时间间隔偿还
+- 债偿基金：每期支付利息，另外建立一个基金，每期向基金存款。贷款期满时，基金累计值正好等于贷款本金，偿还给贷款者
+
+满期偿还简单$A(1+i)^n$
+
+## 分期偿还计划
+
+### 贷款余额
+贷款额L
+每期还款P
+
+第k期的贷款余额(刚刚还完k期)：
+- 未来法
+$Pa_{n-k \urcorner}$
+- 过去法
+$L(1+i)^k-Ps_{k \urcorner}$
+
+### 分期偿还表
+- 每次还款中的利息
+$Pia_{n-k+1\urcorner}$
+- 每次还款中的本金（从利息推导）
+$Pv^{n-k+1}$
+
+- 总本金
+$Pa_{n \urcorner}$
+- 总利息额(从本金推导)
+$P*n-P_{n \urcorner}$
+
+- 某时间段的利息额计算法
+    1. 计算$k_1$到$k_2$时间段的贷款余额$P*a_{n-k1\urcorner}$和$P*a_{n-k2\urcorner}$
+    2. 计算总的还款额$P*(k_2-k_1)$
+    3. 相减
+
+## 连续偿还
+
+- 未来法
+$B_t=\bar a_{n-t\urcorner}$
+- 过去法
+$B_t=\bar a_{n\urcorner}(1+i)^t-\bar s_{t\urcorner}$
+
+- 利息变化率
+$\bar I_t=\delta B_t$
+- 本金变化率
+$\bar P_t=1-\delta B_t$
+$=-\bar P_t$(可以证明)
+
+# 偿债基金
+每月还利息，外存一份基金，使得最终累积值等于本金
+
+## 偿债基金和欠款的利率都是i
+每期总支付为$i+\dfrac{1}{s_{n\urcorner}}$
+$=\dfrac{1}{a_{n\urcorner}}$(这时，两种方法还款额是相同的)
+
+## 利率不相等
+L：贷款额，n：贷款期限
+i：贷款利率，j：偿债基金的存款利率
+D：每期存入偿债基金的金额，P：每期总支出
+
+有：
+$L=D*s_{n\urcorner j}$
+$P=Li+D=L(\dfrac{1}{s_{n\urcorner j}}+i)=\dfrac{L}{\dfrac{a_{n\urcorner}j}{1+(i-j)a_{n\urcorner}}}$
+
+记(定义)，$a_{n\urcorner i\&j}=\dfrac{a_{n\urcorner}j}{1+(i-j)a_{n\urcorner}}$
+
+第k期付款完成后，贷款净余额$NB_k=L-Ds_{k\urcorner j}$
+第k期内净利息支出（贷款利息-基金利息）$NI_k=Li-j*D*s_{k-1\urcorner j}$
+第k期内净本金支付（k期末基金额-k期初基金额）$NP_k=D*s_{k\urcorner j}-D*s_{k-1\urcorner j}=D(1+j)^{k-1}$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
