--- a/[6] 数学/精算师/金融数学3.md
+++ b/[6] 数学/精算师/金融数学3.md
@@ -162,10 +162,10 @@ $B_t=\bar a_{n-t\urcorner}$
 $B_t=\bar a_{n\urcorner}(1+i)^t-\bar s_{t\urcorner}$
 
 - 利息变化率
-$\bar I_t=\delta B_t$
+$d \bar I_t=\delta B_t dt$
 - 本金变化率
 $\bar P_t=1-\delta B_t$
-$=-\bar P_t$(可以证明)
+$\dfrac{d B_t}{d t}=-\bar P_t$(可以证明)
 
 # 偿债基金
 每月还利息，外存一份基金，使得最终累积值等于本金
