脚本自动上传

--- a/神经网络/神经网络笔记.md
+++ b/神经网络/神经网络笔记.md
@@ -139,19 +139,19 @@ $\Delta w_i=-\varepsilon \frac{\partial E}{\partial w_i}$
 ## 4.2 delta rule: sigmoid的情况
 1. sigmoid的神经元是这样的
 $z=b+\sum\limits_ix_iw_i$
-$y=\frac{1}{1+e^{-z}}$
+$y=\dfrac{1}{1+e^{-z}}$
 
 2. sigmoid神经元的特点
-$\frac{dy}{dz}= y(1-y)$
+$\dfrac{dy}{dz}= y(1-y)$
 
 3. sigmoid神经元的学习过程
-$\frac{\partial E}{\partial w_i}=-\sum\limits_n x_{in}y_n(1-y_n)(t_n-y_n)$
+$\dfrac{\partial E}{\partial w_i}=-\sum\limits_n x_{in}y_n(1-y_n)(t_n-y_n)$
 
 ## 4.3 误差向前传播
 
 ### 4.3.1 变量定义
 I表示中间层，J表示输出层
-n表示第n个case
+n表示第n个case/sample
 v表示输出，u表示输入，故而v=g(u)，其中 g()是神经元内的函数
 
 学习过程$w_{ij}(n+1)=\Delta w_{ij}(n)+w_{ij}(n)$
@@ -199,7 +199,7 @@ $\Delta w_{ij}(n)=-\eta \delta_j^J v_i^I$
 
 ### 2.3.4 对于第n个case，I层学习
 (I层之前为M层)
-$\Delta w_{mi}^I= - \eta \dfrac{\partial e}{\partial w_{mi}}v_m^M$
+$\Delta w_{mi}^I= - \eta \dfrac{\partial e}{\partial w_{mi}}$
 
 - 用链式法则拆分
 
