--- a/[6] 数学/精算师/金融数学5.md
+++ b/[6] 数学/精算师/金融数学5.md
@@ -34,7 +34,92 @@ $P'=Nr(1-t_1)a_{n\urcorner}+Cv^n-(C-P')t_2 v^n$
 解出上式$P'=\dfrac{(1-t_2)K+(1-t_1)(g/i)(C-K)}{1-t_2 K/C}$
 
 ## 债券的账面值
+
 按照购买时确定的收益率计算出的平滑数列
+
+- 账面值$B_t=B_{t-1}-P_t$
+性质：
+    - $B_0=P$购买日的账面值等于买入价
+    - $B_n=C$赎回日的账面值等于赎回价
+    - 平滑
+- t期的利息收入$I_t=iB_{t-1}$
+- 本金调整$P_t=Nr-I_t=Cg-I_t$每期的票息收入包括两部分：利息收入+本金调整
+
+*下面计算和推导：*
+C=1
+
+账面值$B_t=1+(g-i)a_{n-t \urcorner }$
+
+
+## 债券的平价
+- **债券的平价** $B^f_{t+k}$ 债券购买日实际交付额
+- **债券的市价** $B^m_{t+k}$ 实际是债券的 **账面值** ，是债券的平价扣除应记票息
+
+- **应计票息**$Nr_k(0<k<1)$
+    - 显然$Nr_0=0,Nr_1=Nr$
+- $B^f_{t+k}=B^m_{t+k}+Nr_k$
+
+三种计算应计票息的方法：
+
+### 理论法
+
+$B^f_{t+k}=B_t (1+i)^k$
+$Nr_k=Nr \dfrac{(1+i)^k-1}{i}$
+
+账面值(市价)：$B^m_{t+k}=B^f_{t+k}-Nr_k$
+
+
+### 实务法
+$B^f_{t+k}=B_t(1+ki)$
+$Nr_k=k*Nr$
+
+### 混合法
+
+$B^f_{t+k}=B_t(1+i)^k$
+$Nr_k=k*Nr$
+
+## 可赎回债券
+不同赎回期的C不一样
+投资者愿意接受的价格是$\min P=C+(g-i)a_{n\urcorner}$
+
+## 系列债券
+指的是举债人发行不同赎回日的一系列债券
+
+根据Makeham公式
+$P=K+\dfrac{g}{i}(C-K)$
+有，
+$\sum\limits_{t=1}^m P_t=\sum\limits_{t=1}^m K_t +\dfrac{g}{i} (\sum\limits_{t=1}^m C_t-\sum\limits_{t=1}^m K_t)$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
