--- a/[6] 数学/精算师/金融数学5.md
+++ b/[6] 数学/精算师/金融数学5.md
@@ -91,18 +91,65 @@ $P=K+\dfrac{g}{i}(C-K)$
 $\sum\limits_{t=1}^m P_t=\sum\limits_{t=1}^m K_t +\dfrac{g}{i} (\sum\limits_{t=1}^m C_t-\sum\limits_{t=1}^m K_t)$
 
 
+## 可转债
+可转债的价格=本金和利息按风险升水利息的折现值+转换权的价值
 
 
+### 转换权的价值
+- 二叉树
+- BS期权定价公式
+$c=S_t \Phi (d_1) -Ke^{-r(T-t)} \Phi(d_2)$
+$d_1=\dfrac{log\dfrac{S_t}{K}+(r+\dfrac{1}{2}\sigma^2)(T-t)}{\sigma \sqrt{T-t}}$
+$d_2=d_1-\sigma \sqrt{T-t}$
+
+其中，
+$\Phi(.)$是 累积正态分布函数
+$S_t$是股票在t时刻的价格
+T为期权到期日
+K为可转债的转股价格
+r是无风险利率
+$\sigma$是股价波动率
+
+## MBS
+抵押支持债券
+(Mortagge - backed Securities)
+
+MBS分为3类：
+
+- MPS(Mortagge Pass - through Securities)抵押转手债券
+MPS中的现金流不经过任何分层组合
+- CMO(collateralized Mortgage Obligations)担保抵押债券
+现金流分成A，B，C，利息按面值比例支付，但是先支付A的本金，然后是B和C
+因此，A承担了主要的提前支付风险
+- SMBS(Stripped Mortgage - backed Securities)分离抵押担保债券
+两个等级：仅包含利息的债券IO(Interest - only)，仅包含本金的债券(Principal - only)
+### 定价
+- 传统定价
+未来现金流贴现
+- 利率模拟定价（二叉树）
+- 期权定价法
 
 
+## 巨灾债券
+保险公司为转移巨灾风险而发行的债券。保险公司要求投资者在某段特定时间内出现约定情况时，放弃部分或全部利息，甚至本金。
 
+触发条件分为两类：
+- 赔偿触发
+- 指数触发
 
+优点：
+- 对投资者：巨灾债券收益率高，拓展了投资组合有效边界
+- 对保险公司：巨灾是系统性风险，不属于可保风险的范畴
 
+定价：
+- 折现（二叉树、蒙特卡洛）
+- 巨灾债券价格=普通公司债券价格-巨灾期权价格
 
-
-
-
-
+巨灾期权的价格：
+- 期望定价法
+先算赔付的分布，然后求期望（积分）
+- 风险中性定价法
+假设指数服从几何布朗运动
 
 
 
