--- a/[6] 数学/精算师/金融数学5.md
+++ b/[6] 数学/精算师/金融数学5.md
@@ -78,6 +78,11 @@ $Nr_k=k*Nr$
 $B^f_{t+k}=B_t(1+i)^k$
 $Nr_k=k*Nr$
 
+## 收益率的计算
+$P=C+C(g-i)a_{n\urcorner}$
+
+令$k=\dfrac{P-C}{C}$
+$i \thickapprox \dfrac{g-k/n}{1+k(n+1)/(2n)}$
 ## 可赎回债券
 不同赎回期的C不一样
 投资者愿意接受的价格是$\min P=C+(g-i)a_{n\urcorner}$
