--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -165,6 +165,7 @@ string.punctuation
 string.digits
 string.whitespace
 ```
+
 返回的是：
 ```
 '!"#$%&\'()*+,-./:;<=>?@[\]^_`{|}~'
@@ -174,25 +175,25 @@ string.whitespace
 # 元组类型（tuple）
 ### 特点：
 - 元组中的元素可以是不同类型的
-```
+```python
 t3=123,456,("hello","中国")
 ```
 - tuple定义之后，其中的元素不能更改，也不能删除
 - 如果tuple中有个list，这个list可以更改
 ## 生成
-```
+```python
 x=(1,2,3)
 x=1,2,3#不加括号也能生成tuple
 x=1,#包含一个元素
 ```
 ## 方法
-```
+```python
 x+y
 3*x
 x[::2]
 ```
 ## 特性：
-```
+```python
 y=[5,6,7]
 x=(1,2,y)
 x[2][0]=1000
@@ -303,16 +304,20 @@ not
 ```
 ## 取值
 
-```
-*   运算符
+
+运算符
+```python
 取值：x['bill'];
 求长度：len(x);
 逻辑判断：'bill' in x;#返回ture
 逻辑判断：'11' in x;#返回false
-*   字典方法（在3.4和2.7版本中有所不同）
-item(): 转为dict_items
-keys():转为dict_keys
-copy():拷贝
+```
+
+字典方法（在3.4和2.7版本中有所不同）
+```python
+item()# 转为dict_items
+keys()#转为dict_keys
+copy()#拷贝
 ```
 
 
@@ -322,12 +327,6 @@ copy():拷贝
 集合是可变的
 
 ## 构造
-
-x1=[1,1,2,3,4];
-
-x=set(x1);
->>> {1, 2}
-
 
 
 ## 方法
