--- a/[9] 读书/[9-5] 社会经济学/7心理学.md
+++ b/[9] 读书/[9-5] 社会经济学/7心理学.md
@@ -200,7 +200,7 @@
 心理创伤分为三大类
 1、被抛弃创伤：3岁前，孩子需要妈妈时，妈妈却不在身边，或者看不到
 2、被吞没创伤：1岁半开始，孩子特别需要自由与独立，但被要求听话
-3、性羞耻感：俄底浦斯清洁。表现为所有需要都是不好的，而性需要时最坏的
+3、性羞耻感：俄底浦斯清洁。表现为所有需要都是不好的，而性需要是最坏的
 
 我们必须切记这一点：
 对别人好，可以赢得认可与尊重；然而若想赢得亲密，只有一条路：真实和敞开
@@ -215,9 +215,10 @@
 1. 家庭关系的定海神针应当是夫妻关系
 2. 然而中国夫妻关系经常回到共生关系（共生绞杀）
 3. 于是共生纽带回到孩子身上
-4. 母子称为关系的核心
+4. 母子变为家庭关系的核心
 5. 父亲更加脱离，母子更加绑紧
-6. 子女长大后，更加爱无能
+6. 子女长大后，同样爱无能
+7. 循环
 ```
 
 >唠叨：控制型咒语
