--- a/[2] python/[0] 总览.md
+++ b/[2] python/[0] 总览.md
@@ -19,3 +19,7 @@
 - Wallbase: http://wallbase.netPython编写的图片站点。
 - uTorrent : http://www.utorrent.comBitTorrent下载软件，主程序仅2Mb，支持ipv6地址解析。开源。
 - Torchlight: torchlight.perfectworld.comPython编写的大型3D游戏，原Blizzard公司人员制作发行，开源。
+
+# CMD
+ipython
+ipython notebook
