--- a/[9] 读书/[9-6] 科技/大数据.md
+++ b/[9] 读书/[9-6] 科技/大数据.md
@@ -91,3 +91,11 @@
 用户画像、网络关联分析、欺诈作弊发现、热点发现
 
 4、推荐
+
+----
+统计推理都是在计算能力不够的情况下使用。所以所有力量都集中在理论，数学理论上，而大数据所有力量都集中在算法优化上。
+
+核心竞争力：
+1、有助于公司进入不同的市场
+2、对最终输出的价值贡献巨大
+3、难以复制和模仿
