--- a/神经网络/神经网络笔记.md
+++ b/神经网络/神经网络笔记.md
@@ -20,16 +20,33 @@
 		- [4.3.1 变量定义](#431-变量定义)
 		- [4.3.2 对于第n个case,J层情况](#432-对于第n个casej层情况)
 		- [4.3.3 对于第n个case，J层学习](#433-对于第n个casej层学习)
+		- [2.3.4 对于第n个case，I层学习](#234-对于第n个casei层学习)
+	- [4.4 关于Linear](#44-关于linear)
+	- [4.5 关于softmax output function](#45-关于softmax-output-function)
+		- [unit 的结构](#unit-的结构)
+		- [对应的cost function](#对应的cost-function)
+- [5 训练方式](#5-训练方式)
+	- [5.1 更新频率](#51-更新频率)
+	- [5.2 学习率](#52-学习率)
+	- [overfitting](#overfitting)
+- [关于认知](#关于认知)
+	- [The feature theory](#the-feature-theory)
+- [The structuralist theory](#the-structuralist-theory)
+- [案例2：图像中的物体识别（LEC5）](#案例2图像中的物体识别lec5)
+	- [困难](#困难)
+	- [解决方案:针对viewpoint](#解决方案针对viewpoint)
+		- [针对dimension-hopping](#针对dimension-hopping)
+		- [CNN模型](#cnn模型)
+		- [deep learning训练过程具体如下：](#deep-learning训练过程具体如下)
 - [感知机模型](#感知机模型)
 
 <!-- /TOC -->
 
 
-
-
-
 # 1前论
+
 ## 1.1优点
+
 1. 自学习和自适应
 2. 非线性    现实世界是一个非线性的复杂系统，人脑也是，
 3. 鲁棒性    局部损坏只会削弱神经网络，而不会产生灾难性错误
@@ -345,6 +362,7 @@ deep learning的训练包括两步：训练和调优
 		1. 向上的权重用于“认知”，向下的权重用于“+生成”，wake-sleep 算法用来使认知和生成达成一致
 		2. wake阶段： 认知过程，通过外界的特征和向上的权重（认知权重）产生每一层的抽象表示（结点状态），并且使用梯度下降修改层间的下行权重（生成权重）。也就是“如果现实跟我想象的不一样，改变我的权重使得我想象的东西就是这样的”。
     3. sleep阶段：生成过程，通过顶层表示（醒时学得的概念）和向下权重，生成底层的状态，同时修改层间向上的权重。也就是“如果梦中的景象不是我脑中的相应概念，改变我的认知权重使得这种景象在我看来就是这个概念”。
+
 ###	deep learning训练过程具体如下：
 		1）使用自下上升非监督学习（就是从底层开始，一层一层的往顶层训练）：
 		       采用无标定数据（有标定数据也可）分层训练各层参数，这一步可以看作是一个无监督训练过程，是和传统神经网络区别最大的部分（这个过程可以看作是feature learning过程）：
