--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -242,9 +242,8 @@ helloString[::-1]
 # dict
 
 - Python对存储顺序进行了优化
-- list的键是数字，dict可以是其它类型
+- list的key是数字，dict的key可以是任何类型的不可变对象（例如，数字、字符、元组）
 - dict排列无序，list有序
-- 键可以是任何类型的不可变对象：数字、字符、元组
 - 值可以是任何类型
 - 命名空间是通过字典来实现的
 
@@ -266,7 +265,7 @@ d = dict(zip(keys,values))
 ## 修改
 
 ```python
-d["key3"]=5#新增一对key-value
+d["key3"]=5#新增一对key-value，如果有key那么是修改
 del(d["key3"])#删除一对key-value
 ```
 
@@ -331,16 +330,16 @@ copy()#拷贝
 
 ## 方法
 
-```
+```python
 z1=x.intersection(y);#交
 z2=y.union(x);#并
 z3=y.difference(x);#差
 ```
 或者：
-```
-x&y
-x|y
-x-y
+```python
+x&y#交
+x|y#并
+x-y#差
 ```
 
 ## 互转
