--- a/[2] python/[0] 总览.md
+++ b/[2] python/[0] 总览.md
@@ -23,3 +23,26 @@
 # CMD
 ipython
 ipython notebook
+
+
+1. NumPy | numpy.org
+N-dimensional array for numerical computation
+2. SciPy | scipy.org
+Collection of numerical algorithms and toolboxes,
+including signal processing and optimization
+3. MatPlotLib | matplotlib.org
+Plotting library for Python
+4. Pandas | pandas.pydata.org
+Powerful Python data analysis toolkit
+5. Seaborn | stanford.edu/~mwaskom/software/seaborn/
+Statistical data visualization
+6. Bokeh | bokeh.pydata.org
+Interactive web visualization library
+7. SciKit-Learn | scikit-learn.org/stable
+Python modules for machine learning and data mining
+8. NLTK | nltk.org
+Natural language toolkit
+9. Notebook | jupyter.org
+Web-based interactive computational
+environment combines code execution, rich
+text, mathematics, plots and rich media
