--- a/[9] 读书/[9-6] 科技/大数据.md
+++ b/[9] 读书/[9-6] 科技/大数据.md
@@ -99,3 +99,55 @@
 1、有助于公司进入不同的市场
 2、对最终输出的价值贡献巨大
 3、难以复制和模仿
+
+# 《大话数据挖掘》
+*Your track will be continued via this*
+
+## 1、什么是数据挖掘？
+数据挖掘，学术界称为KDD(Knowledge Discovery in Database),商用领域成为Data Mining
+## 2、有什么用？
+- 购物篮分析
+- 用户分群
+- 客户流失分析
+- 服务套餐设计
+- 预测
+## 3、用什么方法
+3.1 关联规则。最经典的关联规则是Apriori算法，其基本思想是：首先从事件集中寻找频繁出现的事件子集，然后在这些频繁事件子集中发现可信度较高的规则。
+聚类
+3.2 聚类。按照距离（广义）度量相似性，把对象划分为若干个集合，同一集合相似性较大，不同集合相似性较小。
+K-Means、K-Medoids
+层次聚类
+视觉聚类：格式塔原理。将相似率、连续率、闭合率、近邻率和对称率作为聚类的基本原则。
+最佳聚类个数：尺度δ由小变大，聚类个数在变化，当δ在很大范围内变化，而聚类的个数确稳定不变时，认为达到了最佳聚类个数
+预测方法
+Data→Model→新Data
+
+建模的一般过程：
+【图】
+3.3决策树方法
+ID3方法C4.5方法
+【图】
+当样本过小或包含噪声时，容易产生Overfitting，可以通过剪枝技术克服。
+3.4神经网络ANNs
+容易局部最优。容易Overfitting。网络拓扑结构没有成熟理论。解不具有稀疏性和难以解释
+3.5支持向量机SVM
+3.6正则化方法
+3.7时间序列分析
+www.datamininglab.com
+## 四、数据挖掘流程
+跨行业数据挖掘团队：由专家组、数据组、算法组、软件组、部署组5个组构成
+以轧钢厂条纹质量控制问题为例：
+
+Business understanding：
+深刻理解业务需求，制订数据挖掘目标和初步计划
+Data understanding：
+有些变量的变化特别小，便可以认为是常量，尽管这些因素对质量有影响，但生产工艺控制命中率高，便可以将这些因素删除。
+Data preparation：
+空值：相关分析法（方程）填充
+冗余值：
+离群值：聚类后剔除
+标准化：Zscore
+Modeling：
+
+Evaluation
+Deployment
