--- a/[2] python/[0] 总览.md
+++ b/[2] python/[0] 总览.md
@@ -46,3 +46,5 @@ Natural language toolkit
 Web-based interactive computational
 environment combines code execution, rich
 text, mathematics, plots and rich media
+
+10. jieba分词库
