--- a/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
@@ -132,8 +132,8 @@ $Q=f(X_1,X_2,...X_n)$X可以是：劳动、土地、资本、企业家才能
 ## 市场论
 ### 古诺模型
 $\begin{cases}
-\frac{\partial \pi_1}{\partial Q_1}=0\\
-\frac{\partial \pi_2}{\partial Q_2}=0
+\dfrac{\partial \pi_1}{\partial Q_1}=0\\
+\dfrac{\partial \pi_2}{\partial Q_2}=0
 \end{cases}$
 推出
 $\begin{cases}
