--- a/[5] 其它语言/[2.1] JavaScript.md
+++ b/[5] 其它语言/[2.1] JavaScript.md
@@ -1,3 +1,6 @@
+教学地址
+http://www.jb51.net/article/74884.htm
+
 # 一、简述
 ## 特征：
 1、解释性
@@ -131,10 +134,65 @@ statement
 }while(expression);
 ```
 
+# 函数
+
+```JavaScript
+<script>
+
+function display(){
+  //没有定义形参，那么所有形参会自动存放到arguments这个属性数组中
+  for(var i=0;i<arguments.length;i++){
+    document.write(arguments[i]+'<br>');
+  }
+}
+
+display('lisi','zhangsan','wangwu');  //三个实参
+display('zhangsan','lisi','wangwu','xiaoqiang','wangcai'); //五个实参
+</script>
+```
+(arguments属性，表示函数的形参列表)
 
 # 几个常用的内置函数
-```javascript
+```JavaScript
 var now=new Date();
 var day=now.getDay();
 document.write(x);
+n=Math.round(Math.random()*500)
 ```
+# 变量
+
+使用var：局部变量
+不适用var：全局变量
+
+# 案例
+```JavaScript
+<Script language='JavaScript'>
+	//输出一个字符串
+	document.write('helloworld');
+</Script>
+```
+
+- 尽量避免在js中不能用html标记语言
+```JavaScript
+<Script language='JavaScript'>
+	//输出一个字符串
+	document.write('<strong>');
+	document.write('helloworld');
+	document.write('</strong>');
+</Script>
+```
+
+# 调用其它js文件
+
+```JavaScript
+<script language='JavaScript' src='a.js'></script>
+```
+（带src就不能在在里面写代码了）
+
+- a.js的内容
+```
+document.write('<strong>');
+document.write('helloworld');
+document.write('</strong>');
+```
+（这里么不带`<script>`）
