--- a/[6] 数学/[1.0] 微积分.md
+++ b/[6] 数学/[1.0] 微积分.md
@@ -2,6 +2,42 @@
 试着用markdown记录这些，效果并不好，所以还是参见doc:
 [微积分.docx](微积分.docx)
 
+<!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
+
+- [一元函数微积分](#一元函数微积分)
+	- [中值定理](#中值定理)
+	- [最值点](#最值点)
+	- [极值点](#极值点)
+		- [必要条件1](#必要条件1)
+		- [充分条件1](#充分条件1)
+		- [充分条件3](#充分条件3)
+	- [拐点](#拐点)
+	- [画图](#画图)
+	- [泰勒展开](#泰勒展开)
+		- [常见的泰勒展开](#常见的泰勒展开)
+- [中值定理](#中值定理)
+- [一元积分学](#一元积分学)
+	- [中值定理](#中值定理)
+	- [求积分时的技巧](#求积分时的技巧)
+	- [其它](#其它)
+	- [关于极坐标](#关于极坐标)
+	- [弧微分、角微分、曲率](#弧微分角微分曲率)
+		- [算法1](#算法1)
+		- [算法2](#算法2)
+		- [算法3](#算法3)
+- [级数](#级数)
+	- [几个特殊的级数](#几个特殊的级数)
+		- [几何级数](#几何级数)
+		- [p级数](#p级数)
+	- [审敛法](#审敛法)
+		- [正项级数](#正项级数)
+			- [比较法](#比较法)
+			- [比较法（极限形式）](#比较法极限形式)
+		- [交错级数](#交错级数)
+
+<!-- /TOC -->
+
+
 # 一元函数微积分
 
 ## 中值定理
@@ -36,7 +72,27 @@ $\phi(x)=f(x)-f(a)-\dfrac{f(b)-f(a)}{F(b)-F(a)}(F(x)-F(a))$
 
 ## 拐点
 
-【后面的未完，因为markdown的展现不如word】
+1. 连续（前提）
+2. $f''(x_0)$连续，或者$f''(x_0)$不存在
+3. $f''(x)$在$x_0$附近变号
+
+TH：
+
+如果：
+- $f'(x_0)=f''(x_0)=...=f^n(x_0)=0$
+- $f^{n+1}(x_0) \neq 0$
+
+那么：
+- n%2==0，那么$x_0$是拐点
+- n%2==1,那么：
+    - $f^{n+1}(x_0) > 0$是极小值点
+    - $f^{n+1}(x_0) < 0$是极大值点
+
+## 画图
+- 端点，奇偶点，断点
+- $f(x),f'(x),f''(x)$的零点，不存在点
+- 单调、凸凹、极值、拐点
+- 渐近线
 
 
 ## 泰勒展开
@@ -86,38 +142,6 @@ $(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\a
 
 
 
-
-# 例题
-
-1. 求$f(x)=x^2ln(1+x)$的在x=0处的n阶导数$f^{(n)}(0)$(n>=3)
-
-2.  $f(x)$在闭区间[0,1]上可微，$\forall x \in (0,1) f'(x) \neq 1$
-求证：(0,1)内有且只有一个x，使得$f(x)=x$
-中值定理
-
-3. $f''(x)<0, f(0)=0$，证明，$\forall x_1>0, x_2>0,$有$f(x_1+x_2)<f(x_1)+f(x_2)$
-
-4. $f(x),g(x)$在[a,b]上存在二阶导数，并且$g''(x) \neq 0 ,f(a)=b(b)=g(a)=g(b)=0$
-证明：
-    1) 在(a,b)上$g(x) \neq 0$
-    2) $\exists \xi $使$\dfrac{f(\xi)}{g(\xi)}=\dfrac{f''(\xi)}{g''(\xi)}$
-提示：
-$\phi(x)=f(x)g'(x)-f'(x)g(x)$有$\phi(\xi)=0$
-
-5. $f(x)$在[a,b]上连续，(a,b)上可导，$f(a)=f(b)=1,$证明：
-$\exists \xi ,\eta \in (0,1)$使得$e^{\xi-\eta}[f(\eta)+f'(\eta)]=1$
-
-提示
-$e^x f(x)$
-
-6. $f(x)$在[0,1]上连续，(0,1)上可导$f(0)=f(1)=0,f(1/2)=1$,证明
-    1) $\exists \eta \in (1/2,1)$,使得$f(\eta)=\eta$
-    2) $\forall \lambda ,\exists \xi\in(0,\eta)$,使得$f'(\xi)-\lambda [f(\xi)-\xi]=1$
-提示：
-$e^{-\lambda }(f(x)-x)$
-
-
-
 # 一元积分学
 ## 中值定理
 - TH :积分中值定理
@@ -163,10 +187,76 @@ $=\dfrac{d}{dv}\int_u^vf(t,x)dt*v'(x)-\dfrac{d}{du}\int_u^vf(t,x)dt*u'(x)+\int_{
 
 
 
-
 ## 关于极坐标
 极坐标系围成的面积：
 $S=\int_0^{2\pi}\dfrac{1}{2}r^2d\theta$
+
+
+## 弧微分、角微分、曲率
+
+
+### 算法1
+
+如果
+$\left \{ \begin{array}{ccc}
+x=\phi(t)\\
+y=\psi(t)
+\end{array} \right.$
+
+那么
+
+- 弧微分$ds=\sqrt{\phi'{}^2+\psi'{}^2} dt$
+
+
+- 角微分$\alpha(t)=actan \dfrac{\psi'(t)}{\phi'(t)}=\dfrac{|\phi'\psi''-\psi'\phi''|}{\psi'{}^2+\phi'{}^2}$
+
+
+- 曲率$K=|\dfrac{d \alpha}{ds}|=\dfrac{|\phi'\psi''-\psi'\phi''|}{(\psi'{}^2+\phi'{}^2)^{3/2}}$
+
+
+- 曲率半径$\rho=\dfrac{1}{K}$
+
+### 算法2
+
+如果
+$\rho=\rho (\theta)$
+
+那么，
+$\left \{ \begin{array}{ccc}
+x=\rho(\theta) \cos \theta\\
+y=\rho(\theta) \sin \theta
+\end{array} \right.$
+
+- 弧微分$ds= \sqrt{\rho^2(\theta)+\rho'{}^2(\theta)}d\theta$
+
+
+
+
+
+### 算法3
+- 弧微分$\dfrac{ds}{dx}=\sqrt{1+f'{}^2(x)}$
+
+
+- 角微分$\dfrac{d \alpha}{dx}=\dfrac{f'' (x)}{\sqrt{1+f'{}^2(x)}}$
+
+- 曲率$K=|\dfrac{d \alpha}{ds}|=\dfrac{f'' (x)}{(1+f'{}^2(x))^{3/2}}$
+
+
+- 曲率半径$\rho=\dfrac{1}{K}$
+
+
+几个定义：
+
+渐屈线
+: 曲率中心构成的轨迹
+
+渐伸线
+: 渐屈线对应的原曲线
+
+曲率中心
+
+曲线中恰好放入圆
+: 圆半径<=曲率半径的最小值
 
 
 # 级数
