--- a/[6] 数学/[1.0] 微积分.md
+++ b/[6] 数学/[1.0] 微积分.md
@@ -143,7 +143,7 @@ $(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\a
 
 
 # 一元积分学
-## 中值定理
+## 积分中值定理
 - TH :积分中值定理
 $f(x)$在$[a,b]$上连续，那么$\exists \xi \in [a,b]$使得：
 $\int_a^b f(x) dx = f(\eta)(b-a)$
@@ -153,7 +153,7 @@ $f(x,y)$在有界闭区域D上连续，$\sigma_0$是D的面积，那么$\exists 
 $\iint_D f(x,y)d\sigma =f(\epsilon,\mu) * \sigma_0$
 
 - 中值定理第一推广
-$f(x),g(x)$在[a,b]上连续，g(x)在[a,b]上不变号，那么$\exists \epsilon \in (a,b)$使得，$\int_a^b f(x)g(x) dx =f(a) \int_a^b g(x) dx$
+$f(x),g(x)$在[a,b]上连续，g(x)在[a,b]上不变号，那么$\exists \epsilon \in (a,b)$使得，$\int_a^b f(x)g(x) dx =f(\epsilon) \int_a^b g(x) dx$
 
 - 中值定理第二推广1
 $f(x),g(x)$在[a,b]上可积，f(x)单调，那么$\exists \epsilon \in (a,b)$使得，$\int_a^b f(x)g(x)dx=f(a)\int_a^\epsilon g(x)dx + f(b) \int_\epsilon ^b g(x)dx$
