--- a/[2] python/科学计算/[1.2] numpy.md
+++ b/[2] python/科学计算/[1.2] numpy.md
@@ -1,3 +1,41 @@
+
+<!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
+
+- [多维取数规则](#多维取数规则)
+- [结果不一样](#结果不一样)
+- [random](#random)
+	- [随机种子](#随机种子)
+	- [shuffle重新洗牌](#shuffle重新洗牌)
+	- [choice随机选数](#choice随机选数)
+	- [生成随机数](#生成随机数)
+- [函数](#函数)
+- [如果想要返回idx，需要用np.unravel_index()转换以下：](#如果想要返回idx需要用npunravelindex转换以下)
+- [或者将a平滑化](#或者将a平滑化)
+	- [多项式函数](#多项式函数)
+		- [生成](#生成)
+		- [调用多项式函数(和ufunc一样的用法)](#调用多项式函数和ufunc一样的用法)
+		- [加减乘除](#加减乘除)
+		- [多项式的微分和积分](#多项式的微分和积分)
+		- [多项式的根](#多项式的根)
+		- [多项式拟合](#多项式拟合)
+- [分段数组](#分段数组)
+	- [where](#where)
+	- [select](#select)
+- [统计函数](#统计函数)
+- [线性代数](#线性代数)
+	- [行列式](#行列式)
+	- [矩阵的逆](#矩阵的逆)
+	- [矩阵的积](#矩阵的积)
+- [IO](#io)
+	- [存储](#存储)
+		- [tofile&fromfile](#tofilefromfile)
+		- [save&load](#saveload)
+		- [savez&load](#savezload)
+		- [savetxt&loadtxt](#savetxtloadtxt)
+
+<!-- /TOC -->
+
+
 # 多维取数规则
 ```
 import numpy as np
@@ -58,7 +96,7 @@ max
 argmax
 argmin
 
-```python
+```Python
 a.argmax()#返回的是平滑后的位置
 
 #如果想要返回idx，需要用np.unravel_index()转换以下：
@@ -68,3 +106,138 @@ a[idx]
 #或者将a平滑化
 a.ravel()[a.argmax()]
 ```
+
+## 多项式函数
+
+### 生成
+```py
+import numpy as np
+a=np.array([1,2,3,4])
+pa=np.poly1d(a)
+```
+- 其中a[1]是最高次项
+- a[-1]是常数项
+
+### 调用多项式函数(和ufunc一样的用法)
+```py
+pa([1,2,3])
+pa(np.array([1,2,3]))
+```
+
+### 加减乘除
+```py
+pa+[1,2]#等价于a+np.poly1d([1,2])
+pa*pa
+pa**3
+pa/[1,1]#返回商和余式
+```
+
+### 多项式的微分和积分
+
+```py
+pa.deriv()
+pa.integ()
+```
+
+### 多项式的根
+- roots
+- poly:已知根，求系数
+```py
+r=np.roots(pa)
+np.poly(r)
+```
+
+### 多项式拟合
+
+```py
+a=np.polyfit(x,y,def=3)#返回array格式的系数
+```
+
+# 分段数组
+## where
+格式：
+x=np.where(condition,y,z)
+- x,condition,y,z的shape相同，如果不同会自动广播
+- condition是bool数组，如果为True，返回y中对应元素，否则z
+## select
+多个条件，用where必须嵌套，所以用select
+np.select(condlist,choicelist,default)
+
+# 统计函数
+
+unique
+
+```
+np.bincount(a)
+```
+返回与a同样shape的array，元素是a中元素出现的次数
+
+```
+histogram#返回值和区间
+```
+
+
+# 线性代数
+## 行列式
+```
+import numpy as np
+a=np.random.uniform(0,1,size=(10,10))
+b=np.random.uniform(0,1,size=(10,1))
+A=np.linalg.det(a)
+```
+
+## 矩阵的逆
+```
+np.linalg.inv(a)
+```
+## 矩阵的积
+np.dot(a,b)
+注意，这里的a,b必须是多维的，否则返回的是內积
+
+
+# IO
+
+## 存储
+
+### tofile&fromfile
+```py
+a=np.array([2,3,5],dtype=np.int)
+a.tofile('data.bin')
+np.fromfile('data.bin',dtype=int)
+```
+
+- 按内存顺序存储数据
+- 不存储dtype，不存储shape
+
+### save&load
+```py
+a=np.array([2,3,5,6,7,8],dtype=np.int).reshape(3,-1)
+np.save('data.npy',a)
+b=np.load('data.npy')
+```
+
+- 自动存入dtype和shape
+
+### savez&load
+```py
+a=np.array([2,3,5,6,7,8],dtype=np.int).reshape(3,-1)
+b=np.array([4,5])
+c=np.sin(a)
+np.savez('data.npz',a,b,b=b)#如果不指定变量名，那么自动存为arr_0,arr_1
+```
+- 存储的是一个压缩包，里面有arr_0.npy, arr_1.npy,...
+
+取数
+```
+k=np.load('data.npz')
+k['arr_0']
+```
+
+### savetxt&loadtxt
+```
+a=np.array([2,3,5,6,7,8],dtype=np.int).reshape(3,-1)
+np.savetxt('a.txt',a)
+np.loadtxt('a.txt')
+```
+
+可以用来读csv格式，但忽略了csv中的str（别用这个了，用pandas更方便）
