--- a/[Z] 进行中/大数据案例集.md
+++ b/[Z] 进行中/大数据案例集.md
@@ -1,9 +1,43 @@
-1、 机器学习用于日志管理、机房故障管理、机房用电管理。
+1. 机器学习用于日志管理、机房故障管理、机房用电管理。
            传统机房故障管理：需要管理员掌握和背诵大量很复杂的知识网，而且需要日常练习确保管理员不会忘掉。用机器学习分析日志，可以省去大量劳动力。
             机房用电：如果过度负载，会断电。用机器学习动态调整负载。
 
-2、机器学习用于杀毒
+2. 机器学习用于杀毒
         进程特征上传到云端，对进程和特征的历史进行分析，找到异常
 
-3、模型：某商场引入海底捞后，对商场价值提升了多少。
+3. 模型：某商场引入海底捞后，对商场价值提升了多少。
         描述性统计思路：去海底捞的人，有多少在商场消费。
+
+4. 客户细分
+一个客户从一个群体转到另一个群体时，既是客户流失的风险点，又是客户营销与价值深挖的时机。例如，一个市话比较高的顾客，长途电话突然增加，是离网的预警信息。
+
+# 数据挖掘
+
+变量类型
+->离散型
+       -名称型（姓名、电话）
+       -类别型
+       -序数型
+->连续性
+    -范围型
+    -比例型
+
+有哪些模型？
+- 回归模型
+- 分类模型
+- 聚类模型
+- 基于范例的推理CBR
+
+有哪些类型？
+- 关联规则
+- 序列模式
+- 分类模式
+- 聚类模式
+- 回归模式
+
+空间挖掘
+    - 几何属性
+    - 位置
+web挖掘
+    - web任务挖掘
+    - web
