--- a/[6] 数学/[2] 多元函数微积分.md
+++ b/[6] 数学/[2] 多元函数微积分.md
@@ -45,8 +45,45 @@ Th3:
 - $\left \{ \begin{array}{ccc}
 x=x(t)\\y=y(t)\\z=z(t)
 \end{array}\right.$的切向量是$(x',y',z')$
+
+
 - $F(x,y,z)$的法向量是$(F_x,F_y,F_z)$
 
 # 方向导数和梯度
 
-方向导数：$$
+方向导数
+: $\dfrac{\partial f}{\partial l}=\lim \limits_{t \rightarrow 0^+} \dfrac{f(x_0+tcos \alpha ,y_0+tcos \beta) -f(x_0,y_0)}{t}=f_x cos \alpha +f_y cos \beta$
+
+
+梯度
+: $grad[f(x_0,y_0)] =f_x \vec{i} + f_y \vec{j}$
+
+
+- 相互关系: $\dfrac{\partial f}{\partial l}=grad(f) \vec{e}_l$
+
+# 曲线积分
+
+## 定义
+
+假设曲线是$\phi (t),\psi(t) t \in(\alpha,\beta)$
+
+第一类曲线积分
+: $\int_l f(x,y)ds = \int_\alpha^\beta f(\phi(t),\psi(t)) \sqrt{\phi'{}^2(t)+\psi'{}^2(t)}dt$
+
+第二类曲线积分
+: $\int_l f(x,y)=\int_\alpha^\beta f(\phi(t),\psi(t))d\phi(t)$
+
+## 关系
+- $\int_l Pdx+Qdy=\int_l(Pcos\alpha+Qcos\beta)ds$
+其中，$\alpha(x,y),\beta(x,y)$是方向角
+
+
+- $\iint\limits_D (\dfrac{\partial Q}{\partial x } - \dfrac{\partial P}{\partial y})dxdy=\oint_l Pdx+Qdy$
+其中，沿着l运动，D的左边规定为正
+
+## 推论
+
+- 积分与路径无关$\Longleftrightarrow \dfrac{\partial Q}{\partial x}\equiv\dfrac{\partial P}{\partial y}$
+
+
+- $Pdx+Qdy$是微分$\Longleftrightarrow  \dfrac{\partial Q}{\partial x}\equiv\dfrac{\partial P}{\partial y}$ 
