--- a/[6] 数学/[1.1] 微积分习题.md
+++ b/[6] 数学/[1.1] 微积分习题.md
@@ -34,3 +34,9 @@ $e^{-\lambda }(f(x)-x)$
 解法1：用分布积分法，这是因为$f'(x)$很容易求
 解法2：写成二重积分然后用换元法
 答案：2
+
+
+# 多元微分
+1. $f(x,y)$在$(0,0)$临域内连续，且$\lim\limits_{(x,y)\rightarrow (0,0)} \dfrac{f(x,y)-xy}{(x^2+y^2)^2}=1$，那么(0,0)是否是极值点？
+解法：用y=x，y=-x和等价无穷小来解
+答案：不是
