--- a/[6] 数学/[2] 多元函数微积分.md
+++ b/[6] 数学/[2] 多元函数微积分.md
@@ -41,13 +41,55 @@ TH2：
 - $(\vec u \times \vec v)'=\vec u' \times \vec v+\vec u \times \vec v'$
 - $[\vec u (\phi(t))]'=\vec u' \phi$
 
-Th3:
+## 曲线的切向量与切线
+
 - $\left \{ \begin{array}{ccc}
 x=x(t)\\y=y(t)\\z=z(t)
 \end{array}\right.$的切向量是$(x',y',z')$
 
 
-- $F(x,y,z)$的法向量是$(F_x,F_y,F_z)$
+- $\left \{ \begin{array}{ccc}
+y=y(x)\\z=z(x)
+\end{array}\right.$可以转化为参数形式
+
+
+- 隐式
+$\left \{ \begin{array}{ccc}
+F(x,y,z)=0\\G(x,y,z)=0
+\end{array}\right.$
+
+Def:奈不拉算子
+$\bigtriangledown =\vec i \dfrac{\partial}{\partial x}
++\vec i \dfrac{\partial}{\partial x}
++\vec i \dfrac{\partial}{\partial x}$
+
+把参数形式代入隐式中，得到：
+$\left \{ \begin{array}{ccc}
+\bigtriangledown F_{P_0} \centerdot \vec r=0
+\\\bigtriangledown G_{P_0} \centerdot \vec r=0
+\end{array}\right.$
+
+求出$\vec r$的平行线了：
+
+$\vec r(t) // \bigtriangledown F_{P_0} \times \bigtriangledown G_{P_0}$
+
+这就是隐函数的切向量
+
+## 曲面的切平面与法线
+
+- $F(x,y,z)=0$的法向量是$(F_x,F_y,F_z)$
+
+## 曲线的曲率和挠率
+
+- 曲率描述曲线弯曲的程度
+- 挠率描述曲线偏离平面的程度
+
+
+
+
+
+
+
 
 # 方向导数和梯度
 
@@ -86,4 +128,4 @@ x=x(t)\\y=y(t)\\z=z(t)
 - 积分与路径无关$\Longleftrightarrow \dfrac{\partial Q}{\partial x}\equiv\dfrac{\partial P}{\partial y}$
 
 
-- $Pdx+Qdy$是微分$\Longleftrightarrow  \dfrac{\partial Q}{\partial x}\equiv\dfrac{\partial P}{\partial y}$ 
+- $Pdx+Qdy$是微分$\Longleftrightarrow  \dfrac{\partial Q}{\partial x}\equiv\dfrac{\partial P}{\partial y}$
