--- a/神经网络/神经网络笔记.md
+++ b/神经网络/神经网络笔记.md
@@ -373,6 +373,24 @@ deep learning的训练包括两步：训练和调优
 
 
 ------
+- 按作用分类：
+
+
+| 分类模型     | 回归  |聚类
+| :------------- | :------------- |---|
+| BP|BP|SOM
+SOM（自组织映射）|RBF
+PNN|Elman
+
+特点：
+1. 无须预先知道方程、
+2. 根据输出层的个数，可以升维和降维
+3. 3层BP可以拟合任何方程
+4. 不用考虑自变量的分布（对比线性回归，朴素贝叶斯等）
+
+
+
+
 - 按结构分类
  - 前向网络
    - 单层前向
