--- a/[2] python/[0] 总览.md
+++ b/[2] python/[0] 总览.md
@@ -13,12 +13,17 @@
 - Jython是用Java实现的Python，可同时使用二者的类库
 - IronPython是Python在.NET平台上的版本。
 
+
 # 知名的Python应用
 - Zope：www.zope.com一个应用程序服务器，具有内容管理、团队开发、XML、面向对象、SOAP接口等一系先进特性，开源。
 - Gadfly：http://www.chordate.com/gadfly.html一个用Python写的面向对象关系型数据库，具有小巧、快速、可移植性好的特点，具有大部分SQL语言特性。开源。
 - Wallbase: http://wallbase.netPython编写的图片站点。
 - uTorrent : http://www.utorrent.comBitTorrent下载软件，主程序仅2Mb，支持ipv6地址解析。开源。
 - Torchlight: torchlight.perfectworld.comPython编写的大型3D游戏，原Blizzard公司人员制作发行，开源。
+
+
+- jdango
+用来写网页
 
 # CMD
 ipython
@@ -48,3 +53,9 @@ environment combines code execution, rich
 text, mathematics, plots and rich media
 
 10. jieba分词库
+
+
+# 基本操作
+ctrl+/  注释
+tab     缩进
+shift+tab 取消缩进
