--- a/[2] python/[1.1] 运算符.md
+++ b/[2] python/[1.1] 运算符.md
@@ -15,7 +15,7 @@
 <thead><tr class="tableizer-firstrow"><th>运算符</th><th>名称</th><th>说明</th><th>例子</th></tr></thead><tbody>
  <tr><td><</td><td>小于</td><td>返回x是否小于y。所有比较运算符返回1表示真，返回0表示假。这分别与特殊的变量True和False等价。注意，这些变量名的大写。</td><td>5 < 3返回0（即False）而3 < 5返回1（即True）。比较可以被任意连接：3 < 5 < 7返回True。</td></tr>
  <tr><td>></td><td>大于</td><td>返回x是否大于y</td><td>5 > 3返回True。如果两个操作数都是数字，它们首先被转换为一个共同的类型。否则，它总是返回False。</td></tr>
- <tr><td> $<=$ </td><td>小于等于</td><td>返回x是否小于等于y</td><td>x = 3; y = 6; x <= y返回True。</td></tr>
+ <tr><td> &lt;= </td><td>小于等于</td><td>返回x是否小于等于y</td><td>x = 3; y = 6; x <= y返回True。</td></tr>
  <tr><td>>=</td><td>大于等于</td><td>返回x是否大于等于y</td><td>x = 4; y = 3; x >= y返回True。</td></tr>
  <tr><td>==</td><td>等于</td><td>比较对象是否相等，注意，是对象！</td><td>x = 2; y = 2; x == y返回True。x = 'str'; y = 'stR'; x == y返回False。x = 'str'; y = 'str'; x == y返回True。</td></tr>
  <tr><td>!=</td><td>不等于</td><td>比较两个对象是否不相等</td><td>x = 2; y = 3; x != y返回True。</td></tr>
