--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -117,6 +117,15 @@ len()  返回字符串的长度
 str()  返回数字对应的字符串
 
 ```
+
+其它操作
+```
+endswith
+capitalize
+count
+```
+
+
 ### format()方法
 ```python
 x="{1}{2}:计算机的CPU占用了{0}%。"
