--- a/[2] python/[9.4] time库.md
+++ b/[2] python/[9.4] time库.md
@@ -101,3 +101,9 @@ d2 = datetime.datetime.strptime('2015-03-02 17:41:20', '%Y-%m-%d %H:%M:%S')
 delta = d1 - d2
 print(delta.days)
 ```
+
+## 暂停程序
+```
+import time
+time.sleep(0.5)
+```
