--- a/[3] 算法/模型评价.md
+++ b/[3] 算法/模型评价.md
@@ -1,4 +1,4 @@
-对回归和分类模型的评价
+## 对回归和分类模型的评价
 - accurate
 - stable
 同一样本得出的模型，不能变化太大
@@ -14,7 +14,7 @@
     - uncorelated predictor
     - corelated predictor
 
-# 对交易模型的评价
+## 对交易模型的评价
 
 - 这个系统是不是黑盒
 如果模型的内在逻辑很难用业务逻辑解释，那么要打上一个问号
@@ -30,3 +30,17 @@
     - 魔法数字：为何是20日移动平均？为何不是30日或21日？
     - 规则越简单，越不容易过拟合
     - 对参数的敏感程度（不要参数稍小变动导致交易效果巨量变动）
+
+## 概率模型的评价（针对accurate）
+
+### 混淆矩阵
+TP，FP，TN，TP
+
+### ROC曲线
+- 观察曲线
+- 求出曲线下方的面积，也就是R统计量
+- 有些模型可以求出R统计量的解析形式
+
+### Brier评分
+
+这个方法是在北科文档里面看到的，
