--- a/[Z] 进行中/正在读.md
+++ b/[Z] 进行中/正在读.md
@@ -36,3 +36,22 @@
 
 
 123
+
+# 演讲的力量
+TED掌门人克里斯。安德森
+很多时候，双方互相说的和听的，原本就是各自了解的东西，那不叫有效沟通，而是闲聊。然而，做到这些已经是一个概率很小的事情了，所以闲聊的双方恨不得喝酒庆祝。
+更有时候，谈话双方都假装我说什么你听得懂，你说什么我也听得懂。
+
+四条建议：
+1. Focus on one major idea
+2. Give your listeners reason to care
+3. Build your idea with familiar concepts
+4. Makeyour idea worth sharing
+
+四种陷阱
+1. 不要推销。要给予，而不是推销，及时你在做的事是推销。
+2. 不要漫谈。要有清晰的脉络和充分的准备
+3. 不要过分谈论你的团队。专注于你所从事工作的本质，专注于渗透其间的伟大思想，而不是专注于你的公司或产品。
+4. 不要只有形式，没有内容
+
+主线：你要把所有的碎片用主线串联起来。删除与主线无关的碎片
