--- a/[3] 算法/模型评价.md
+++ b/[3] 算法/模型评价.md
@@ -1,3 +1,5 @@
+
+
 ## 对回归和分类模型的评价
 - accurate
 - stable
@@ -13,6 +15,8 @@
 - Feature selection
     - uncorelated predictor
     - corelated predictor
+
+
 
 ## 对交易模型的评价
 
@@ -31,7 +35,7 @@
     - 规则越简单，越不容易过拟合
     - 对参数的敏感程度（不要参数稍小变动导致交易效果巨量变动）
 
-## 概率模型的评价（针对accurate）
+## 针对accurate评价方法
 
 ### 混淆矩阵
 TP，FP，TN，TP
